...
                            searching = !searching
                        }
                        Box {
                            IconButton(onClick = { filters = true }) {
                                Icon(
                                    Icons.Outlined.FilterList,
                                    "Filter messages",
                                    tint =
                                        if (query.filter.active) MaterialTheme.colorScheme.primary
                                        else LocalContentColor.current,
                                )
                            }
                            DropdownMenu(
...
